fix: add layout and styles for header and preview section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <section class="header-menu-section">
- <div class="container">
+ <div class="container main-wrapper">
         <div class="logo">
           <img src="assets/svg/Vector.svg" alt="logo" />
           <span>Travel Portal</span>
@@ -39,30 +39,23 @@
             </li>
           </ul>
         </nav>
-        <div><button class="button-logo">Login</button></div>
+       <button class="button-logo">Login</button>
       </section>
-      <div class="header-main">
-       <div class="section-preview" id="preview">
-          <section class="section-preview-item">
-            <div class="section-preview-title">
+      <div class="main-wrapper">
+          <section class="section-preview">
               <h1 class="main-title">Explore the beauty of </br> the World</h1>
-            </div>
-            <div class="section-preview-text">
-              <p>
+              <p class="section-preview-text">
                 Receive personalized recommendations for countries, hotels,
                 activities and more
               </p>
-            </div>
-            <section class="section-preview-form"></section>
-            <form class="section-preview-form-text">
-              <input class="section-preview-form-batton" type="text" placeholder="What would you like to do?">
-              <button class="button-search" type="submit">Start Planning</button>
+            <form class="section-preview-form">
+              <input class="section-preview-form-input" type="text" placeholder="What would you like to do?">
+              <button class="section-preview-form-button" type="submit">Start Planning</button>
             </form>
-          </section>
         </section>
       </div>
-           </div>
-          </header>
+       
+    </header>
 
     <main class="main">
       <div id="container">
